--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,2 +1,6 @@
 <h1>Courses#index</h1>
 <p>Find me in app/views/courses/index.html.erb</p>
+Searching for: <%= params[:search] %><p/>
+<% for course in @courses %>
+<%= course.name %><br>
+<% end %>
