Added Semester controller and changed index to Semester index

--- a/app/views/semesters/index.html.erb
+++ b/app/views/semesters/index.html.erb
@@ -1,2 +1,7 @@
 <h1>Semesters#index</h1>
-<p>Find me in app/views/semesters/index.html.erb</p>
+
+<ul>
+<% for semester in @semesters %>
+<li><%= link_to semester.name, semester %></li>
+<% end %>
+</ul>
