--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,6 +1,16 @@
 <h1>Courses#index</h1>
 <p>Find me in app/views/courses/index.html.erb</p>
-Searching for: <%= params[:search] %><p/>
+<% 
+if (params[:search].nil?)
+	searchtext = "All courses"
+else
+	searchtext = h(params[:search])
+end
+%>
+	
+Searching for: <%= searchtext %><p/>
 <% for course in @courses %>
 <%= course.name %><br>
 <% end %>
+<br/>
+Courses for: <%=session[:semester]%>
