Check choose_semester in application_controller; pluralize controller names.

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -11,6 +11,6 @@
     <%= course.name %><br>
   <% end -%>
   <br/>
-  Courses for: <%= session[:semester]%> <br/>
+  Courses for: <%= Semester.find(session[:semester]).name %> <br/>
   <%= link_to 'Change semester', {:controller => 'semesters', :action => 'index'} %>
 <% end %>
