--- a/app/views/layouts/default.html.erb
+++ b/app/views/layouts/default.html.erb
@@ -1,8 +1,26 @@
 <html>
 <body>
-<div class="tab"<%= ( @selected_tab == 'tab1' ) ? ' id="selectedtab"' : '' %>>tab1</div>
-<div class="tab"<%= ( @selected_tab == 'tab2' ) ? ' id="selectedtab"' : '' %>>tab2</div>
-<div class="tab"<%= ( @selected_tab == 'tab3' ) ? ' id="selectedtab"' : '' %>>tab3</div>
+<style>
+ul.tabList {
+	list-style: none;
+	display: inline;
+}
+
+ul.tabList li {
+	display: inline;
+	padding: .1em;
+	border: 1px #69F solid;
+}
+
+ul.tabList li#selectedTab{
+	border: 2px #36F solid;
+}
+</style>
+<ul class="tabList">
+<li class="tab"<%= ( @selected_tab == 'tab1' ) ? ' id="selectedtab"' : '' %>>tab 1</li>
+<li class="tab"<%= ( @selected_tab == 'tab2' ) ? ' id="selectedtab"' : '' %>>tab 2</li>
+<li class="tab"<%= ( @selected_tab == 'tab3' ) ? ' id="selectedtab"' : '' %>>tab 3</li>
+</ul>
 <%= yield %>
 </body>
 </html>
