--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,5 +1,29 @@
 <h1>Courses</h1>
 
+<style>
+  .extra {
+    display: none;
+  }
+  
+
+  
+  tr.main td {
+    border: 1px #36F solid;
+    padding: .1em;
+  }
+</style>
+
+<script type="text/javascript">
+  function toggle(id) 
+  {
+    var shown = $("tr#" + id + "extra").toggle().css("display");
+    if(shown == "none")
+      return "+";
+    else
+      return "--";
+  }
+</script>
+
 <% if @courses.nil? %>
   <% form_tag '/courses', :method => :get do -%>
     <%= text_field_tag 'search' %> <%= submit_tag 'Submit', :name => nil %>
@@ -7,9 +31,19 @@
   <% end -%>
 <% else %>
   Searching for: <%= (params[:search].empty? ? 'All courses' : h(params[:search]) ) %><p/>
+
+  <table>
   <% for course in @courses %>
-    <%= course.name %><br>
+    <tr id="<%=course.id%>main" class="main">
+      <td><a href="javascript:void(0)" onclick="this.innerHTML = toggle('<%=course.id%>')">+</a></td>
+      <td><%= course.subject%><%=course.number%></td>
+      <td><%=course.name%></td>
+    </tr>
+    <tr id="<%=course.id%>extra" class="extra">
+      <td colspan=3><%=course.description%></td>
+    </tr>
   <% end -%>
+  </table>
   <br/>
   Courses for: <%= Semester.find(session[:semester]).name %> <br/>
 
