Updated displaying of courses to use partials

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -10,16 +10,7 @@
   Searching for: <%= (params[:search].empty? ? 'All courses' : h(params[:search]) ) %><p/>
 
   <table>
-  <% for course in @courses %>
-    <tr id="<%=course.id%>main" class="main">
-      <td><a href="javascript:void(0)" onclick="this.innerHTML = toggle('<%=course.id%>')">+</a></td>
-      <td><%= course.subject%><%=course.number%></td>
-      <td><%=course.name%></td>
-    </tr>
-    <tr id="<%=course.id%>extra" class="extra">
-      <td colspan=3><%=course.description%></td>
-    </tr>
-  <% end -%>
+    <%= render :partial => "course", :collection => @courses %>
   </table>
   <br/>
   Courses for: <%= Semester.find(session[:semester]).name %> <br/>
