A few more style tweaks and changed the course list to sort by subject + number. Now, why is it displaying multiple lines for a given course?

--- a/app/views/courses/_course.erb
+++ b/app/views/courses/_course.erb
@@ -1,5 +1,5 @@
 <tr id="<%=course.id%>main" class="main">
-  <td><a href="javascript:void(0)" onclick="this.innerHTML = toggle('<%=course.id%>')">+</a></td>
+  <td class="expander"><a href="javascript:void(0)" onclick="this.innerHTML = toggle('<%=course.id%>')">+</a></td>
   <td><%= course.subject%><%=course.number%></td>
   <td><%=course.name%></td>
 </tr>
