--- a/app/views/courses/_course.erb
+++ b/app/views/courses/_course.erb
@@ -6,7 +6,7 @@
 <tr id="<%=course.id%>extra" class="extra">
   <td colspan=3><%=course.description%>
   <table class='sectionList'>
-    <%= render :partial => "sections/section", :collection => course.sections %>
+    <%= render :partial => "sections/section", :collection => course.sections.find_all_by_semester_id(session[:semester]) %>
   </table>
   
   </td>
