--- a/app/views/layouts/default.html.erb
+++ b/app/views/layouts/default.html.erb
@@ -14,7 +14,7 @@
   <%= link_to "Browse", {:controller => 'courses', :action => 'index'} %>
   </li>
   <li class="tab"<%= ( @selected_tab == 'tab2' ) ? ' id="selectedtab"' : '' %>>
-  <%= link_to "Plan of Work", {:controller => 'requirements', :action => 'index'} %>
+  <%= link_to "Plan of Work", {:controller => 'degree_requirements', :action => 'index'} %>
   </li>
   <li class="tab"<%= ( @selected_tab == 'tab3' ) ? ' id="selectedtab"' : '' %>>
   <%= link_to "Wishlist", {:controller => 'wishlist_classes', :action => 'index'} %>
