s/registeredClass/registeredSection/ ; s/waitlistClass/waitlistSection/ ; s/passedClass/passedCourse/

--- a/app/views/layouts/default.html.erb
+++ b/app/views/layouts/default.html.erb
@@ -18,7 +18,7 @@
   <%= link_to "Plan of Work", degree_requirements_path %>
   </li>
   <li class="tab"<%= ( @selected_tab == 'tab3' ) ? ' id="selectedtab"' : '' %>>
-  <%= link_to "Wishlist", wishlist_classes_path %>
+  <%= link_to "Wishlist", wishlist_sections_path %>
   </li>
 </ul>
 &nbsp;
