--- a/app/views/sections/_section.erb
+++ b/app/views/sections/_section.erb
@@ -7,12 +7,12 @@
   </td>
   <td class="button">
     <input  type="button" 
-            onclick="$.post('<%= url_for :controller => 'wishlist_classes', :action => 'create', :id => section.id %>')"
+            onclick="$.post('<%= url_for :controller => 'wishlist_sections', :action => 'create', :id => section.id %>')"
             value="Add to Wishlist">
   </td>
   <td class="button">
     <input  type="button" 
-            onclick="$.post('<%= url_for(:controller => 'registered_classes', :action => 'create') %>')"
+            onclick="$.post('<%= url_for(:controller => 'registered_sections', :action => 'create') %>')"
             value="Add to Schedule">
   </td>
 </tr>
