--- a/app/views/wishlist_sections/index.html.erb
+++ b/app/views/wishlist_sections/index.html.erb
@@ -1,5 +1,5 @@
-<h1>WishlistClasses#index</h1>
-<p>Find me in app/views/wishlist_classes/index.html.erb</p>
+<h1>WishlistSections#index</h1>
+<p>Find me in app/views/wishlist_sections/index.html.erb</p>
 
 <table>
 <%= render :partial => "courses/course", :collection => @wishlist_courses %>
