--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Courses</h1>
 
 <% form_tag '/courses', :method => :get do -%>
-    <%= text_field_tag 'search', h(params[:search]) %> <%= submit_tag 'Submit', :name => nil %>
+  <%= text_field_tag 'search', h(params[:search]) %> <%= submit_tag 'Submit', :name => nil %>
 <% end -%>
 
 <% if @courses.nil? %>
@@ -9,9 +9,7 @@
 <% else %>
   Searching for: <%= (params[:search].empty? ? 'All courses' : h(params[:search]) ) %><p/>
 
-  <table class="courseList">
-    <%= render :partial => "course", :collection => @courses %>
-  </table>
+  <%= render :partial => "course_list", :object => @courses %>
   <br/>
 
 <% end %>
