--- a/app/views/wishlist_sections/index.html.erb
+++ b/app/views/wishlist_sections/index.html.erb
@@ -2,5 +2,14 @@
 <p>Find me in app/views/wishlist_sections/index.html.erb</p>
 
 <table>
-<%= render :partial => "courses/course", :collection => @wishlist_courses %>
+<% oldname = "" %>
+<% for section in @wishlist_sections %>
+   
+  <% if(section.course.name != oldname)%>
+    <%=render :partial => "courses/course", :object => section.course %>
+    <%=render :partial => "sections/section", :object => section, :locals => {:show_remove_button => "true"} %>
+    <% oldname = section.course.name%>
+  <% end %>
+  
+<% end %>
 </table>
