Sliding for groups

--- a/app/views/courses/_course.erb
+++ b/app/views/courses/_course.erb
@@ -6,7 +6,7 @@
 </tr>
 <tr id="<%=course.id%>extra" class="extra">
   <td colspan=4>
-  <div>
+  <div class="slider">
     <%=course.description%>
     <table class='sectionList'>
       <%= render :partial => "sections/section", :collection => course.sections.find_all_by_semester_id(session[:semester]) %>
