--- a/app/views/wishlist_sections/index.html.erb
+++ b/app/views/wishlist_sections/index.html.erb
@@ -1,6 +1,5 @@
-<h1>WishlistSections#index</h1>
-<p>Find me in app/views/wishlist_sections/index.html.erb</p>
+<h1>Wishlist</h1>
 
-<table>
-<%= render :partial => "courses/course", :collection => @wishlist_courses %>
+<table class="courseList">
+  <%= render :partial => "courses/course", :collection => @wishlist_sections.map(&:section) %>
 </table>
