There are again buttons on the search page. Also, flash message when removing a class from wishlist.

--- a/app/views/courses/_course.erb
+++ b/app/views/courses/_course.erb
@@ -26,7 +26,13 @@ end
   <div class="slider">
     <%=course.description%>
     <table class="sectionList">
-      <%= render :partial => "sections/section", :collection => sections %>
+      <% if not defined? options
+            options = {}
+          end
+      %>
+      <%= render  :partial => "sections/section", 
+                  :collection => sections, 
+                  :locals => {:options => options} %>
     </table>
   </div>
   </td>
