Show current schedule in plan of work and wishlist too; close anchor tag on wishlist_sections index.

--- a/app/views/degree_requirements/index.html.erb
+++ b/app/views/degree_requirements/index.html.erb
@@ -6,3 +6,5 @@
     <%= render :partial => "#{classname.pluralize}/#{classname}", :object => req.required %>
   <% end %>
 </table>
+
+<%= render :partial => 'registered_sections/schedule' %>
