--- a/app/views/courses/_course.erb
+++ b/app/views/courses/_course.erb
@@ -14,7 +14,7 @@ end
 %>
 <%- unique_id = generate_unique_id course.id -%>
 <tr id="<%=unique_id%>main" class="main">
-  <td class="expander"><a href="javascript:void(0)" onclick="this.innerHTML = toggle_row('<%=unique_id%>')">+</a></td>
+  <td class="expander"><a href="javascript:void(0)" onclick="this.innerHTML = toggle_row('<%=unique_id%>')"><img src="/images/add_greyscale.png"></a></td>
   <td><%= course.subject%><%=course.number%></td>
   <td<%= ' colspan="2"' unless show_section_count %>><%= course.name%></td>
   <td><%= pluralize(course.credits, "Credit hour") %></td>
