--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,31 +1,2 @@
-<html>
-<head>
-  <%= javascript_include_tag 'jquery-1.3.2.min', 'application' %>
-  <%= stylesheet_link_tag 'application' %>
-  <% # helper methods below are defined in app/helpers/application_helper.rb %>
-  <% include_filename = current_action_include_filename(controller) %>
-  <%= stylesheet_link_tag include_filename if css_exists?(include_filename) %>
-  <%= javascript_include_tag include_filename if js_exists?(include_filename) %>
-</head>
-<body>
-
-<% if session[:semester] %>
-<ul class="tabList">
-  <li class="tab"<%= ( @selected_tab == 'tab1' ) ? ' id="selectedtab"' : '' %>>
-  <%= link_to "Search", courses_path %>
-  </li>
-  <li class="tab"<%= ( @selected_tab == 'tab2' ) ? ' id="selectedtab"' : '' %>>
-  <%= link_to "Plan of Work", degree_requirements_path %>
-  </li>
-  <li class="tab"<%= ( @selected_tab == 'tab3' ) ? ' id="selectedtab"' : '' %>>
-  <%= link_to "Wishlist", wishlist_sections_path %>
-  </li>
-</ul>
-&nbsp;
-Current semester: <%= Semester.find(session[:semester]).name %>
-<%= link_to "(Change semester)", semesters_path%>
-<% end %>
-
-<%= yield %>
-</body>
-</html>
+<%= render :partial => 'layouts/header' %>
+<%= render :partial => 'layouts/tabs' %>
