--- a/app/views/layouts/mypackportal.html.erb
+++ b/app/views/layouts/mypackportal.html.erb
@@ -1,12 +1,4 @@
-<html>
-<head>
-  <%= javascript_include_tag 'jquery-1.3.2.min', 'application' %>
-  <%= stylesheet_link_tag 'application' %>
-  <% # helper methods below are defined in app/helpers/application_helper.rb %>
-  <% include_filename = current_action_include_filename(controller) %>
-  <%= stylesheet_link_tag include_filename if css_exists?(include_filename) %>
-  <%= javascript_include_tag include_filename if js_exists?(include_filename) %>
-</head>
+<%= render :partial => 'layouts/header' %>
 
 <LINK REL="stylesheet" HREF="/stylesheets/ncsu/EPPSTYLEDEF_1.css" TYPE="text/css"> 
 <LINK REL="stylesheet" HREF="/stylesheets/ncsu/NC_REDSTYLEDEF_2.css" TYPE="text/css"> 
@@ -108,25 +100,4 @@ form.search{ margin-bottom: 0; margin-top: 0; }
   <img src="/images/enrollment.png" style="float: left;">
 </td><td valign="top" cellpadding="5" width="100%">
 
-<% if session[:semester] %>
-<ul class="tabList">
-  <li class="tab"<%= ( @selected_tab == 'tab1' ) ? ' id="selectedtab"' : '' %>>
-  <%= link_to "Search", courses_path %>
-  </li>
-  <li class="tab"<%= ( @selected_tab == 'tab2' ) ? ' id="selectedtab"' : '' %>>
-  <%= link_to "Plan of Work", degree_requirements_path %>
-  </li>
-  <li class="tab"<%= ( @selected_tab == 'tab3' ) ? ' id="selectedtab"' : '' %>>
-  <%= link_to "Wishlist", wishlist_sections_path %>
-  </li>
-</ul>
-&nbsp;
-Current semester: <%= Semester.find(session[:semester]).name %>
-<%= link_to "(Change semester)", semesters_path%>
-<% end %>
-
-<%= yield %>
-
-</td></tr></table>
-</body>
-</html>
+<%= render :partial => 'layouts/tabs' %>
