Buttons appear in degree requirements. :options passed through relevant partials

--- a/app/views/courses/_course.erb
+++ b/app/views/courses/_course.erb
@@ -29,13 +29,9 @@ end
       <%=course.description%>
     </div>
     <table class="sectionList">
-      <% if not defined? options
-            options = {}
-          end
-      %>
       <%= render  :partial => "sections/section",
                   :collection => sections,
-                  :locals => {:options => options} %>
+                  :locals => {:options => defined?(options) ? options : {} } %>
     </table>
   </div>
   </td>
