Plan of work has schedule/wishlist buttons and schedule has drop buttons.

--- a/app/views/groups/_group.html.erb
+++ b/app/views/groups/_group.html.erb
@@ -3,6 +3,7 @@
   <td class="expander"><a href="javascript:void(0)" onclick="this.innerHTML = toggle_row('group<%=unique_id%>')"><%= expand_button %></a></td>
   <td>GRP <%=group.number%></td>
   <td colspan="5"><%= group.name%></td>
+  <td>&nbsp;</td>
 </tr>
 <tr id="group<%= unique_id %>extra" class="extra">
 <td colspan="5">
