--- a/app/views/sections/_section.erb
+++ b/app/views/sections/_section.erb
@@ -16,7 +16,7 @@
   <% if options["show_schedule_button"] %>
   <td class="button">
     <input  type="button" 
-            onclick="$.post('<%= url_for(:controller => 'registered_sections', :action => 'create') %>')"
+            onclick="$.post('<%= url_for(:controller => 'registered_sections', :action => 'create', :id => section.id) %>')"
             value="Add to Schedule">
   </td>
   <% end %>
@@ -24,6 +24,13 @@
   <td class="button">
     <input  type="button" 
             onclick="$.post('<%= url_for(:controller => 'wishlist_sections', :action => 'destroy', :id => section.id) %>')"
+            value="Remove from wishlist">
+  </td>
+  <% end %>
+    <% if options["show_drop_button"] %>
+  <td class="button">
+    <input  type="button" 
+            onclick="$.post('<%= url_for(:controller => 'registered_sections', :action => 'destroy', :id => section.id) %>')"
             value="Remove from wishlist">
   </td>
   <% end %>
