--- a/app/views/sections/_section.erb
+++ b/app/views/sections/_section.erb
@@ -23,15 +23,17 @@
   <% if options["show_remove_button"] %>
   <td class="button">
     <input  type="button" 
-            onclick="$.post('<%= url_for(:controller => 'wishlist_sections', :action => 'destroy', :id => section.id) %>')"
+            onclick="$.ajax({ type: 'delete',
+                              url:  '<%= url_for(:controller => 'wishlist_sections', :action => 'destroy', :id => section.id) %>'})"
             value="Remove from wishlist">
   </td>
   <% end %>
-    <% if options["show_drop_button"] %>
+  <% if options["show_drop_button"] %>
   <td class="button">
     <input  type="button" 
-            onclick="$.post('<%= url_for(:controller => 'registered_sections', :action => 'destroy', :id => section.id) %>')"
-            value="Remove from wishlist">
+            onclick="$.ajax({ type: 'delete',
+                              url:  '<%= url_for(:controller => 'registered_sections', :action => 'destroy', :id => section.id) %>'})"
+            value="Remove from schedule">
   </td>
   <% end %>
 </tr>
