--- a/app/views/courses/_course.erb
+++ b/app/views/courses/_course.erb
@@ -15,8 +15,8 @@ end
 <%- unique_id = generate_unique_id course.id -%>
 <tr id="<%=unique_id%>main" class="main">
   <td class="expander"><a href="javascript:void(0)" onclick="this.innerHTML = toggle_row('<%=unique_id%>')"><%= expand_button %></a></td>
-  <td><%= course.subject%><%=course.number%></td>
-  <td<%= ' colspan="2"' unless show_section_count %>><%= course.name%></td>
+  <td><a href="javascript:void(0)" onclick="toggle_row('<%=unique_id%>')"><%= course.subject%><%=course.number%></a></td>
+  <td<%= ' colspan="2"' unless show_section_count %>><a href="javascript:void(0)" onclick="toggle_row('<%=unique_id%>')"><%= course.name%></a></td>
   <td><%= pluralize(course.credits, "Credit hour") %></td>
   <%- if show_section_count -%>
   <td colspan="100"><%= pluralize(sections.length, "section") %>
